# github-sdv-poc-msp-ota-updater

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml
buildspec/: .gitignore  package_buildspec.yaml  tag-image_buildspec.yaml  unit-test_buildspec.yaml  upload-package_buildspec.yaml
cmake/: FindFilesystem.cmake
dep/: .gitignore
include/updater/: app.hpp  fs.hpp
include/updater/interface/: updater.hpp
src/: app.cpp
test/: .gitignore
test/unit/: CMakeLists.txt
tests/: conftest.py  ota-updater-config.yaml
tests/ota_updater_tests/: test_ota_updater_integration.py
